--- a/wiki/%E8%AE%80.wikitext
+++ b/wiki/%E8%AE%80.wikitext
@@ -1,4 +1,4 @@
-* '''Alternate forms''': [[读]], [[讀]]
+* '''Alternate forms''': [[读]], [[読]], [[讀]]
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 149''': [[Wiktionary:Chinese radical index 言|言]]+15 strokes
 
@@ -13,13 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#read, study
-*# pronounce
+*# [[read]], [[study]]
+*# [[pronounce]]
 
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,7 +38,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[とく]] (toku), [[とう]] (tō), [[どく]] (doku)
