--- a/wiki/%EC%98%A4%EB%8A%98.wikitext
+++ b/wiki/%EC%98%A4%EB%8A%98.wikitext
@@ -1,9 +1,6 @@
-'''오늘'''
 ==Korean==
 ===Noun===
-====Pronunciation====
-* / o-neul /
-====Meaning====
-*[[today]]
+'''오늘'''(o-neul)
 
+#[[today]]
 [[ko:오늘]]
