--- a/wiki/%E4%BB%8A%E6%97%A5.wikitext
+++ b/wiki/%E4%BB%8A%E6%97%A5.wikitext
@@ -1,16 +1,11 @@
 ==Japanese==
-'''[[今]][[日]]''' (きょう, こんにち)
-
-===Pronunciation===
-# / kyō / (きょう)
-# / kon-nichi / (こんにち)
-
 ===Noun===
-#(きょう)[[today]]
-#(きょう, こんにち)[[nowadays]]
+'''[[今]][[日]]''' (kyō:きょう, konnichi:こんにち)
 
+#(きょう) [[today]]
+#(きょう, こんにち) [[nowadays]]
 [[ja:今日]]
-
+----
 ==Chinese==
 '''[[今]][[日]]'''
 
