--- a/wiki/Uzbekistan.wikitext
+++ b/wiki/Uzbekistan.wikitext
@@ -34,6 +34,7 @@
 *Spanish: [[Uzbekistán]]
 *Swedish: Uzbekistan
 *Turkish: [[Özbekistan]]
+*Ukrainian: [[Узбекистан]]
 
 ===See also===
 *[[Countries of the world]]
