/* Translations */ <Qur'an#35840>

--- a/wiki/Qur%27an.wikitext
+++ b/wiki/Qur%27an.wikitext
@@ -18,18 +18,17 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
 *Arabic: [[القُرْآن]]
 *Finnish: [[koraani]]
 *French: le [[Coran]] ''m''
 *German: der [[Koran]] ''m''
 *Hebrew: [[הקוראן]]
-*Italian: il [[Corano]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+*Italian: il [[Corano]] ''m''
+*Japanese: [[クルアーン]] (kuruan), [[コーラン]] (koran)
 *Romanian: [[Coranul]]
 *Spanish: el [[Corán]] ''m''
 *Swedish: [[koranen]]
@@ -71,7 +70,6 @@ The translations below need to be checked by native speakers and inserted into t
 *Dutch: de [[Koran]]
 *[[Esperanto]]: [[Korano]]
 *Indonesian: [[Al Qur'an]]
-*Japanese: [[クルアーン]] (kuruan)
 *Korean: [[꾸란]]
 *Polish: [[koran]]
 *[[Romanica]]: [[Coran]] ''m''
