--- a/wiki/potato.wikitext
+++ b/wiki/potato.wikitext
@@ -33,5 +33,6 @@
 *Spanish: [[patata]] ''f'', [[papa]] ''f'' (Mexico)
 *Swedish: [[potatis]]
 *[[Tibetan]]: [[ཞོ་ཁོག་]] (zho khog)
+*Urdu: [[آلو]]
 |}
 |}
