--- a/wiki/destroy.wikitext
+++ b/wiki/destroy.wikitext
@@ -1,4 +1,5 @@
 == English ==
+
 ====Hyphenation====
 :de&middot;stroy
 
@@ -49,3 +50,8 @@
 
 |}
 |}
+
+==[[multilingual associations]]==
+*[[Russian]]: 
+**строй /stroj/ ([[build]]) и /i/ (and) '''destroy''' 
+**'''destroy''' [[:ru:строй|строй]] /stroj/ ([[system]])
