Spelling correction for aesthetic <ugly#41648>

--- a/wiki/ugly.wikitext
+++ b/wiki/ugly.wikitext
@@ -3,7 +3,7 @@
 
 # very unattractive, repulsive
 # displeasing to the eye, or ear, or sensibilities
-# not asthetically pleasing
+# not aesthetically pleasing
 
 ====Antonyms====
 *[[beautiful]], [[gorgeous]]
