--- a/wiki/destroy.wikitext
+++ b/wiki/destroy.wikitext
@@ -37,6 +37,8 @@
 |}
 |}
 
+*[[Russian]]: [[:ru:разрушать|разрушать]] /razruSat'/
+
 '''to release resources on a computer'''
 {| border=0  width=100%
 |-
