--- a/wiki/trenchant.wikitext
+++ b/wiki/trenchant.wikitext
@@ -1,8 +1,8 @@
 ==English==
 
-===Verb===
+===Adjective===
 
-'''to trenchant'''
+'''trenchant'''
 
 #Fitted to trench or cut; gutting; sharp.
 #Fig.: Keen; biting; severe; as, trenchant wit.
