--- a/wiki/hat.wikitext
+++ b/wiki/hat.wikitext
@@ -18,6 +18,7 @@
 *Slovene: [[klobuk]] ''m''
 *Spanish: [[sombrero]] ''m''
 *Swedish: [[hatt]] ''c''
+*Urdu: [[ٹوپى]]
 *Vietnamese: [[mũ]], [[nón]]
 
 ====Related terms====
