--- a/wiki/dance.wikitext
+++ b/wiki/dance.wikitext
@@ -6,6 +6,7 @@
 ====Translations====
 *French: [[danse]]
 *Japanese: [[踊り]] (おどり), [[舞踊]] (ぶよう)
+*Urdu: [[رقص]] ,[[ناچ]]
 
 ===Related terms===
 *[[dancer]]
