This has only one form: "raw material" (adjective, noun) <raw material#65159>

--- a/wiki/raw_material.wikitext
+++ b/wiki/raw_material.wikitext
@@ -1,6 +1,5 @@
 {{-en-}}
 {{-noun-}}
-'''raw-material''' ''or'' '''raw material''' ''or'' '''rawmaterial'''
+'''raw material''' (''plural'' '''raw materials''')
+
 # An unprocessed natural usable or manufacturable material.
-{{-div-}}
-'''raw-materials''' ''or'' '''raw materials''' ''or'' '''rawmaterials''' (''plural'')
