fmt, etym, clarified def <moval#65142>

--- a/wiki/moval.wikitext
+++ b/wiki/moval.wikitext
@@ -1,5 +1,8 @@
-== Noun ==
-#The act of moving.
+==English==
+===Etymology===
+Backformation from [[removal]]
 
-====Related terms====
-*[[move]]
+===Noun===
+'''moval''' (''plural'' '''movals''')
+
+#[[Removal]] (''transfer of one's home or business'').
