--- a/wiki/cat.wikitext
+++ b/wiki/cat.wikitext
@@ -46,6 +46,7 @@
 *[[Romanica]]: [[felino]] ''m'', [[felina]] ''f''
 *[[Spanish]]: [[felino]] ''m'', [[felina]] ''f''
 *Swedish: [[kattdjur]] ''n''
+*Urdu: [[بلى]]
 |}
 |}
 '''tame species'''
