--- a/wiki/moval.wikitext
+++ b/wiki/moval.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Backformation from [[removal]]
+[[Back-formation]] from '''[[removal]]'''
 
 ===Noun===
 '''moval''' (''plural'' '''movals''')
