--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -61,6 +61,7 @@
 *German: [[dick]]
 *Spanish: [[gordo]] ''m'', [[gorda]] ''f''
 *Swedish: [[fet]] (1,2,3,4), [[tjock]] (1,2), [[rik]] (3,4)
+*Urdu: [[موٹا]] ''m'', [[موٹى]] ''f''
 
 === Transitive Verb===
 '''to fat'''
