--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -32,6 +32,7 @@
 *Slovak: [[tuk]] ''m''
 *Spanish: [[grasa]] ''f''
 *Swedish: [[fett]] (1,2)
+*Urdu: [[چربى]]
 
 === Adjective ===
 '''fat''' ([[fatter]], [[fattest]])
