--- a/wiki/the.wikitext
+++ b/wiki/the.wikitext
@@ -110,7 +110,7 @@ Old English ''&thorn;&aelig;t'', neuter article; Middle English ''&thorn;&aelig;
 *[[Samoan]]: [[le]] ''singular'', [[e]] ''plural''
 *Spanish: [[el]] ''m'', [[la]] ''f'', [[los]] ''m plural'', [[las]] ''f plural'', [[lo]] ''n''
 *Swedish: ''uses articles and/or suffixes at the same time; suffixes are always, and articles are only, needed before an adjective''
-**''articles:'' [[den#Swedish|Swedish]] ''common, f, m'', [[det]] ''n singular''; [[de]] ''plural''
+**''articles:'' [[den#Swedish|den]] ''common, f, m'', [[det]] ''n singular''; [[de]] ''plural''
 **''suffixes:'' [[-n]], [[-en]], [[-t]], [[-et]] ''singular''; [[-en]], [[-na]] ''plural''
 *[[Tongan]]: [[te#Tongan|te]]
 *Turkish: ''not used; a word '''not''' preceded by [[bir]] is implicitly definite''
