--- a/wiki/autotheistic.wikitext
+++ b/wiki/autotheistic.wikitext
@@ -1,6 +1,8 @@
 ==English==
 
 ===Etymology===
+Greek: ''autos'': self and ''theos'': god
+
 Probably coined by Michael Peacock.  The word was first circulated in print in an anonymous underground satirical history of the 629 MI Batallion's deployment to Bosnia in 2000.  
 
 ===Adjective===
