--- a/wiki/hello.wikitext
+++ b/wiki/hello.wikitext
@@ -64,7 +64,7 @@
 *Thai: (sawaad-dii)
 *Turkish: [[merhaba]] (1), [[alo]] (2), [[efendim]] (2)
 *[[Tyvan]]: [[экии]] (ekii)
-*Urdu: [[آداب]]
+*Urdu: [[السلام علیکم]] ,[[آداب]]
 *Vietnamese:
 *#[[chào]] ([[ông]], [[bà#Vietnamese|bà]], [[cô#Vietnamese|cô]], [[anh#Vietnamese|anh]], [[chị]], [[em#Vietnamese|em]], [[quí vị]] &ndash; depending on subject of gratitude)!
 *#[[á-lô]]!
