tied quots, syns and translations to defs; some translations need to be checked; modified fr:; +it: <fat#1038499>

--- a/wiki/fat.wikitext
+++ b/wiki/fat.wikitext
@@ -1,5 +1,4 @@
 ==English==
-
 ===Pronunciation===
 *[[w:AHD|AHD]]: făt
 *[[w:IPA|IPA]]: /fæt/
@@ -7,27 +6,83 @@
 **[[Rhymes:English:-æt|Rhymes: -æt]]
 
 === Noun ===
-'''fat'''
+'''fat''' (''[[uncountable]] and countable''; ''plural'' '''fats''')
 
-# Specialized animal tissue with a high oil content, used for long-term storage of energy
-# A refined substance chemically resembling the oils in animal fat
-# That part of an organization deemed wasteful
-#: ''We need to trim the fat in this company''
-# A large tub, cistern, or vessel; a vat. (''plural'' fats) [Obs.]
-#:'''Quotations'''
-#:*'''1882''': In 1431 New College purchases brewing vessels, under the names of a mash fat, for 6s. 10d., a wort fat for 2s., a 'Gilleding' tub for 2s. 6d., and two tunning barrels at 8d. each, a leaden boiler for 24s., another for 12s., and a great copper beer pot for 13s. 4d. &mdash; James Edwin Thorold Rogers, ''A History of Agriculture and Prices in England'', Volume 4, p. 429.
+#(''uncountable'') A specialized animal tissue with a high oil content, used for long-term storage of energy.
+#(''countable'') A refined substance chemically resembling the oils in animal fat.
+#That part of an organization deemed wasteful.
+#:''We need to trim the fat in this company''
+#(''countable''; ''obsolete'') A large tub, cistern, or vessel; a vat.
 
-==== Synonyms ====
-*[[grease]]
-*[[lard]]
+====Synonyms====
+*(''animal tissue''): [[adipose tissue]], [[lard]] (''in animals''; ''derogatory slang when used of human fat'')
+*(''substance chemically resembling the oils in animal fat''): [[grease]], [[lard]]
+*(''tub''): [[vat]]
+
+====Quotations====
+
+(''vat''):
+*'''1882''': In 1431 New College purchases brewing vessels, under the names of a mash fat, for 6s. 10d., a wort fat for 2s., a 'Gilleding' tub for 2s. 6d., and two tunning barrels at 8d. each, a leaden boiler for 24s., another for 12s., and a great copper beer pot for 13s. 4d. &mdash; James Edwin Thorold Rogers, ''A History of Agriculture and Prices in England'', volume 4, page 429.
 
 ==== Translations ====
+
+'''specialized animal tissue with a high oil content, used for long-term storage of energy'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[gras]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''refined substance chemically resembling the oils in animal fat'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[gras]] ''m'', [[matière grasse]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''that part of an organization deemed wasteful'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''vat'''
+''See'' [[vat]]
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is unreliable.
+
 *Bulgarian: [[мазнина]] ''f''
 *Czech: [[tuk]] ''m''
 *Danish: [[fedt]] ''n''
 *Dutch: [[vet]] ''n''
-*Finnish: [[rasva]] (1, 2), [[läski]] (1), [[liiat]] ''pl'' (3), [[vati#Finnish|vati]] (4)
-*French: [[graisse]] ''f''
+*Finnish: [[rasva]] (1, 2), [[läski]] (1), [[liiat]] ''pl'' (3)
 *Russian: (žir) ''m''
 *Slovak: [[tuk]] ''m''
 *Spanish: [[grasa]] ''f''
@@ -37,50 +92,98 @@
 === Adjective ===
 '''fat''' ([[fatter]], [[fattest]])
 
-# Heavier than normal
-# Thick
-# Bountiful
-#: ''seven fat years followed by seven lean years''
-# ''(music)'' Rich in texture, prominent (''cf.'' [[phat]])
-#: ''The song has a fat bass line''
+#Carrying a larger than normal amount of fat on one's body.
+#Thick.
+#:''fat chunks of meat''
+#Bountiful.
+#:''seven fat years followed by seven lean years''
+#Variant form of '''[[phat]]'''.
 
 ==== Synonyms ====
-*[[obese]]
-*[[rotund]]
+*(''carrying a larger than normal amount of fat''): [[chubby]], [[chunky]], [[lardy]] (''slang'') [[obese]], [[overweight]], [[porky]] (''slang''), [[rotund]], [[tubby]]
+*(''thick''): [[thick]]
+*(''bountiful''): [[bountiful]], [[prosperous]]
 
 ==== Antonyms ====
-*[[skinny]]
-*[[slim]]
-*[[thin]]
+*(''carrying a larger than normal amount of fat''): [[lean]], [[skinny]], [[slim]], [[thin]]
 
 ==== Translations ====
+
+'''carrying a larger than normal amount of fat on one's body'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[gros]] ''m'', [[grosse]] ''f''
+*German: [[dick#German|dick]]
+*Italian: [[grosso]] ''m'', grossa ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: [[gordo]] ''m'', [[gorda]] ''f''
+|}
+|}
+
+'''thick'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''bountiful'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is unreliable.
+
 *Bulgarian: [[дебел]] ''m''
-*Danish: [[fed]]
+*Danish: [[fed#Danish|fed]]
 *Dutch: [[vet]], [[vette]], [[dik]], [[dikke]], [[gezet]], [[gezette]]
 *Finnish: [[lihava]] (1, 3), [[paksu]] (1, 2), [[satoisa]] (3), [[runsas]] (3, 4)
-*French: [[obèse]]
-*German: [[dick]]
-*Spanish: [[gordo]] ''m'', [[gorda]] ''f''
-*Swedish: [[fet]] (1,2,3,4), [[tjock]] (1,2), [[rik]] (3,4)
+*Swedish: [[fet]] (1, 2, 3, 4), [[tjock]] (1, 2), [[rik]] (3, 4)
 *Urdu: [[موٹا]] ''m'', [[موٹى]] ''f''
 
-=== Transitive Verb===
+=== Transitive verb===
 '''to fat'''
 
-# ''(archaic)'' To make fat; [[fatten]]
+#(''archaic'') To make fat; to [[fatten]].
 #: ''Kill the fatted calf''
 
-=== Related terms ===
-*[[fatten]]
-
-===Translations===
-* Danish: [[opfede]]
-*Finnish: [[lihottaa]] (1)
+====Translations====
+*Danish: [[opfede]]
+*Finnish: [[lihottaa]]
 *Swedish: [[göda]]
+
+===Related terms===
+*[[fatten]]
 
 ----
 ==Swedish==
 ===Noun===
-'''fat''' ''n'' (''pl'' '''fat''', ''def sing'' [[fatet]], ''def pl'' [[faten]])
+'''fat''' ''n'' (''plural'' '''fat''', ''definite singular'' [[fatet]], ''definite plural'' [[faten]])
 
-# [[plate]], a serving dish
+#[[plate]] (''serving dish'')
