fmt; moved fi: here from "fat"; +pronunciation; +it:; +n def <vat#32948>

--- a/wiki/vat.wikitext
+++ b/wiki/vat.wikitext
@@ -1,26 +1,34 @@
-==Pronunciation==
-*[[Rhymes:English:-æt|Rhymes: -æt]]
+==English==
+===Pronunciation===
+*[[IPA]]: /væt/
+*[[SAMPA]]: /v{t/
+**[[Rhymes:English:-æt|Rhymes: -æt]]
 
 ===Noun===
+'''vat''' (''plural'' '''vats''')
 
-'''vat'''
+#A large tub, such as is used for making [[wine]].
 
-#
+====Translations====
+*Finnish: [[vati]]
+
+===Pronunciation===
+*[[IPA]]: /viːeɪˈti/, /væt/
+*[[SAMPA]]: /vi:eI'ti/, /v{t/
 
 ===Abbreviation===
-
 '''VAT'''
 
-# Value Added Tax
+#[[Value added tax]].
 
 ===Translations===
-*[[Dutch]]: [[BTW]]
-*[[French]]: [[TVA]]
-*[[German]]: [[MWS]] ??
-*[[Spanish]]: [[IVA]]
+*Dutch: [[BTW]]
+*French: [[TVA]]
+*Italian: [[IVA]]
+*German: [[MWS]] ??
+*Spanish]]: [[IVA]]
 
 ----
-
 ==Dutch==
 ===Noun===
 
@@ -29,12 +37,12 @@
 #[[barrel]]
 
 ===Synonyms===
-[[ton]]
+*[[ton]]
 
 ===Noun===
 '''vat''' ''f''
 
 #[[grip]]
 
-===Related words===
-[[vatten]]
+===Related terms===
+*[[vatten]]
