moved fi: here from nl: entry on page for "BTW" <vat#32948>

--- a/wiki/vat.wikitext
+++ b/wiki/vat.wikitext
@@ -21,14 +21,16 @@
 
 #[[Value added tax]].
 
-===Translations===
+====Translations====
 *Dutch: [[BTW]]
+*Finnish: [[ALV]]
 *French: [[TVA]]
 *Italian: [[IVA]]
 *German: [[MWS]] ??
 *Spanish]]: [[IVA]]
 
 ----
+
 ==Dutch==
 ===Noun===
 
