--- a/wiki/freedom.wikitext
+++ b/wiki/freedom.wikitext
@@ -24,3 +24,4 @@ From Old-English [[freo]], from Proto-Germanic *''frijaz'', which derives from P
 *[[Romanica]]: [[libertate]] ''f''
 *[[Russian]]: [[свобода]]
 *[[Spanish]]: [[libertad]] ''f''
+*Urdu: [[آزادى]]
