--- a/wiki/asshole.wikitext
+++ b/wiki/asshole.wikitext
@@ -17,5 +17,6 @@
 *German: [[Arschloch]] ''n'' (1,2)
 *Persian: [[كس‌كش]] (koskesh)
 *Slovak: [[riť#Slovak|riť]] ''f'' (1), [[kokot#Slovak|kokot]] ''m'' (2)
+*Urdu: [[گانڈ]]
 
 [[Category:English vulgarities]]
