--- a/wiki/one.wikitext
+++ b/wiki/one.wikitext
@@ -91,6 +91,7 @@
 *[[Tok Pisin]]: [[wan]] (the name of the number), [[wanpela]]
 *[[Tupinambá]]: [[îepé]], [[oîepé]]
 *Turkish: [[bir]] (''bir küçük kebap lütven'')
+*Urdu: [[ایک]]
 *Vietnamese: [[một]] ([[International Phonetic Alphabet|IPA]]: /mòt/)
 *Welsh: [[un]]
 |}
