moved German translation into correct table (it is nominative, according to the page for "man") and removed "Translations to be checked" section; moved "one year of age" to adj; +fr: & it: <one#1692>

--- a/wiki/one.wikitext
+++ b/wiki/one.wikitext
@@ -119,19 +119,20 @@ Used in either the nominative or accusative case. (''Reflexive case'': [[oneself
 {|
 *[[Breton]]: [[den ebet]], [[unan bennak]]
 *[[Catalan]]: [[algú]] ''m'', [[qualcú]] ''m'', [[alguna]] ''f'', [[qualcuna]] ''f''
-*Dutch: [[ze]], [[men]], [[iemand]], [[ene]]
+*Dutch: [[ze]], [[men#Dutch|men]], [[iemand]], [[ene]]
 *[[Esperanto]]: [[iu]]
-*French: [[on]], [[quelqu'un]]
+*French: [[on#French|on]], [[quelqu'un]]
+*German: [[man#German|man]]
 *Hindi: ''Not translated''
-*[[Interlingua]]: [[uno]], [[alcuno]]; ''expressions of the type "one" + transitive verb + direct object are also rendered with the reflexive pronoun [[se]]: "one sees the sea" = "le mar se vide" (literally, "the sea sees itself")''
+*[[Interlingua]]: [[uno]], [[alcuno]]; ''expressions of the type "one" + transitive verb + direct object are also rendered with the reflexive pronoun [[se#Interlingua|se]]: "one sees the sea" = "le mar se vide" (literally, "the sea sees itself")''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Italian: [[si]], [[qualcuno]]
-*Portuguese: [[a]] [[pessoa]] ''f'', [[alguém]]; ''expressions of this type are also rendered with the reflexive pronoun [[se]]: "One shouldn't be too quick to judge" = "Não se deve ser rápido demais em julgar"
-*Romanian: [[unul]] ''m'', [[una]] ''f''; [[cineva]]
-*Spanish: [[uno]], [[alguien]]
+*Italian: [[si#Italian|si]], [[qualcuno]]
+*Portuguese: [[a#Portuguese|a]] [[pessoa]] ''f'', [[alguém]]; ''expressions of this type are also rendered with the reflexive pronoun [[se]]: "One shouldn't be too quick to judge" = "Não se deve ser rápido demais em julgar"
+*Romanian: [[unul]] ''m'', [[una#Romanian|una]] ''f''; [[cineva]]
+*Spanish: [[uno#Spanish|uno]], [[alguien]]
 *Swedish: [[man#Swedish|man]]
 *Turkish: [[biri]], [[birini]]
 *Vietnamese: [[mình]]
@@ -144,9 +145,9 @@ Used in either the nominative or accusative case. (''Reflexive case'': [[oneself
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *[[Breton]]: [[an hini]]
-*[[Catalan]]: [[la]]
-*Dutch: [[de]]
-*[[Esperanto]]: [[la]]
+*[[Catalan]]: [[la#Catalan|la]]
+*Dutch: [[de#Dutch|de]]
+*[[Esperanto]]: [[la#Esperanto|la]]
 *French: ''Not translated: 
 **"the" + adjective + "one" is translated as [[le]] + m adjective, 
 **[[la]] + f adjective; 
@@ -172,20 +173,12 @@ Used in either the nominative or accusative case. (''Reflexive case'': [[oneself
 |}
 |}
 
-=====Translations to be checked=====
-
-The translations below need to be checked by native speakers and inserted into the appropriate tables above.
-
-*German: [[man#German|man]]
-
 ===Noun===
 '''one''' (''plural'' '''ones''')
 
 #The digit or figure 1.
 #(''US'') A one-[[dollar]] [[bill]].
-#One [[year]] of [[age]]; One [[year]] [[old]].
-#:''"My baby is one."''
-#:''"In 6 months she'll be one and a [[half]]."''
+<!--note: the sense "one year of age" is an adjective-->
 
 ====Translations====
 '''digit or figure'''
@@ -224,11 +217,20 @@ The translations below need to be checked by native speakers and inserted into t
 |}
 |}
 
-'''age'''
+===Adjective===
+'''one'''
+
+#One [[year]] of [[age]]; one [[year]] [[old]].
+#:''"My baby is one - in six months she'll be one and a [[half]]."''
+
+====Translations====
+
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*French: ''Not translated using an adjective'': '''he is one''' - il a un an
+*French: ''Not translated using an adjective'': '''he is one''' - ha un anno
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
