fmt; see also <red state#64872>

--- a/wiki/red_state.wikitext
+++ b/wiki/red_state.wikitext
@@ -1,6 +1,8 @@
 ==English==
+===Noun phrase===
+'''red state''' (''plural'' '''red states''')
 
-===Noun Phrase===
-'''red state'''
+#(''US'') A state of the [[United States]] voting [[Republican]] in a given election, or tending to vote Republican in general.
 
-# (''US'') A state voting Republican in a given election, or tending to vote Republican in general.
+===See also===
+*[[blue state]]
