fmt as for "red state" <blue state#64873>

--- a/wiki/blue_state.wikitext
+++ b/wiki/blue_state.wikitext
@@ -1,6 +1,8 @@
 ==English==
+===Noun phrase===
+'''blue state''' (''plural'' '''blue states''')
 
-===Noun Phrase===
-'''blue state'''
+#(''US'') A state of the [[United States]] voting [[Democratic]] in a given election, or tending to vote Democratic in general.
 
-# (''US'') A state voting Democratic in a given election, or tending to vote Democratic in general.
+===See also===
+*[[red state]]
