--- a/wiki/crumb.wikitext
+++ b/wiki/crumb.wikitext
@@ -20,7 +20,7 @@ Crumb
 *Greek: [[ψίχουλο]]
 *Japanese: [[パン粉]]
 *Portuguese: [[migalha]] ''f''
-*Russian: [[крошка]] 
+*Russian: [[:ru:крошка|крошка]] 
 *Spanish: [[miga]] ''f''
 
 ===Verb===
@@ -30,8 +30,8 @@ Crumb
 *[[crumbed]]
 
 ====Translations====
-*[[German]]: [[panieren]]
-*[[Russian]]: [[крошка]]
+*[[German]]: [[:de:panieren|panieren]]
+*[[Russian]]: [[:ru:крошить|крошить]]
 
-==Multilingual links==
-*[[English]]-[[Russian]]: [[crumb]] [[вес]]ом ([[weighted]]) [[грамм]]  ([[gramm]])
+==[[Multilingual associations]]==
+*[[Russian]]: [[crumb]] [[:ru:вес|вес]]ом ([[weighted]]) [[:ru:грамм|грамм]]  ([[gramm]])
