--- a/wiki/describe.wikitext
+++ b/wiki/describe.wikitext
@@ -1,3 +1,5 @@
+==English==
+
 === Transitive verb===
 '''to describe'''
 
@@ -7,9 +9,13 @@
 #: ''The function describes a very complex surface.''
 
 ====Translations====
-[[Estonian]]: [[kirjeldama]] (1)
-[[German]]: [[beschreiben]] (1)
+*[[Estonian]]: [[kirjeldama]] (1)
+*[[German]]: [[beschreiben]] (1)
+*[[Russian]]: [[:ru:описать|описать]] /opisat'/
 
 ====Related terms====
 *[[description]]
 *[[descriptive]]
+
+==[[multilingual associations]]==
+*[[Russian]]: '''describe''' [[:ru:десерт|десерт]] [[:ru:из|из]] /iz/ (of) [[:ru:краб|краб]]а /kraba/ ([[crab]])
