--- a/wiki/%DB%81%D9%88%D8%A7_%DA%86%DA%BE%D9%88%DA%91%D9%86%D8%A7.wikitext
+++ b/wiki/%DB%81%D9%88%D8%A7_%DA%86%DA%BE%D9%88%DA%91%D9%86%D8%A7.wikitext
@@ -1,4 +1,4 @@
 ==Urdu==
 ===Verb===
 '''هوا چهوڑنا'''
-# To [[Fart#Verb|fart]]; literally, to release wind.
+# To [[Fart#Verb|fart]]; literally, to release [[wind]].
