--- a/wiki/burp.wikitext
+++ b/wiki/burp.wikitext
@@ -8,6 +8,7 @@
 
 ====Translations====
 *Dutch: [[boer]], [[oprisping]]
+*Urdu: [[ڈکار]] (dakar)
 
 ===Intransitive verb===
 '''to burp''' ([[burped]], burped)
