as for "f-word"; commented out list of examples, as these are all nonce words <b-word#7797>

--- a/wiki/b-word.wikitext
+++ b/wiki/b-word.wikitext
@@ -1,7 +1,10 @@
 ==English==
 ===Noun===
+'''the b-word''' ''or'' '''the B-word''' (''plural'' '''f-words''' ''or'' '''B-words''')
 
-#[[Euphemism]] for various words beginning with B:
+#(''euphemistic'') Refers to any of various taboos words beginning with  ''b'', such as '''[[bastard]]''', '''[[bitch]]''' or ''[[bugger]]''.
+#Any word beginning with ''b'' that is not normally taboo but is considered to be so in the given context.
+<!-- these are all nonce words
 #*[[bimbo]] in [http://lounge.bust.com/discus/messages/12/34390.html?1092034440 the BUST lounge]
 #*[[bitch]] various places
 #*[[biodiversity]]  &mdash; John Harte, from [http://www.defenders.org/bio-bi03.html ''DEFENDERS Magazine, Spring 1996 issue'']
@@ -14,3 +17,4 @@
 #*[[bubble]] in the economic sense, attributed to Paul Krugman, also found in [http://www.theage.com.au/articles/2003/09/17/1063625090248.html?from=storyrhs&oneclick=true ''The Age, September 18, 2003'']
 #*[[budget]] various places
 #*[[bureaucracy ]] David Hall in [http://www.findarticles.com/p/articles/mi_m0JQP/is_2003_April/ai_100462812 ''New Internationalist, April, 2003'']
+-->
