+links to "f-word" & "n-word" <b-word#7797>

--- a/wiki/b-word.wikitext
+++ b/wiki/b-word.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''the b-word''' ''or'' '''the B-word''' (''plural'' '''f-words''' ''or'' '''B-words''')
 
-#(''euphemistic'') Refers to any of various taboos words beginning with  ''b'', such as '''[[bastard]]''', '''[[bitch]]''' or ''[[bugger]]''.
+#(''euphemistic'') Refers to any of various taboos words beginning with  ''b'', such as ''[[bastard]]'', ''[[bitch]]'' or ''[[bugger]]''.
 #Any word beginning with ''b'' that is not normally taboo but is considered to be so in the given context.
 <!-- these are all nonce words
 #*[[bimbo]] in [http://lounge.bust.com/discus/messages/12/34390.html?1092034440 the BUST lounge]
@@ -18,3 +18,7 @@
 #*[[budget]] various places
 #*[[bureaucracy ]] David Hall in [http://www.findarticles.com/p/articles/mi_m0JQP/is_2003_April/ai_100462812 ''New Internationalist, April, 2003'']
 -->
+
+===See also===
+*[[f-word]]
+*[[n-word]]
