--- a/wiki/f-word.wikitext
+++ b/wiki/f-word.wikitext
@@ -6,3 +6,7 @@
 #:''The dialogue was littered with f-words.''
 #Any word beginning with ''f'' that is not normally taboo but is considered to be so in the given context.
 #:''She has no luck with diets.  Don't mention the f-word (that is, "fat").''
+
+===See also===
+*[[b-word]]
+*[[n-word]]
