--- a/wiki/b-word.wikitext
+++ b/wiki/b-word.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''the b-word''' ''or'' '''the B-word''' (''plural'' '''f-words''' ''or'' '''B-words''')
+'''b-word''' ''or'' '''B-word''' (''plural'' '''b-words''' ''or'' '''B-words''')
 
 #(''euphemistic'') Refers to any of various taboos words beginning with  ''b'', such as ''[[bastard]]'', ''[[bitch]]'' or ''[[bugger]]''.
 #Any word beginning with ''b'' that is not normally taboo but is considered to be so in the given context.
