--- a/wiki/f-word.wikitext
+++ b/wiki/f-word.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''the f-word''' ''or'' '''the F-word''' (''plural'' '''f-words''' ''or'' '''F-words''')
+'''f-word''' ''or'' '''F-word''' (''plural'' '''f-words''' ''or'' '''F-words''')
 
 #(''euphemistic'') The word ''[[fuck]]''.
 #:''The dialogue was littered with f-words.''
