--- a/wiki/f-word.wikitext
+++ b/wiki/f-word.wikitext
@@ -4,8 +4,8 @@
 
 #(''euphemistic'') The word ''[[fuck]]''.
 #:''The dialogue was littered with f-words.''
-#Any word beginning with ''f'' that is not normally taboo but is considered to be so in the given context.
-#:''She has no luck with diets.  Don't mention the f-word (that is, "fat").''
+#Any word beginning with ''f'' that is not normally taboo but is considered (often humorously) to be so in the given context.
+#:''She has no luck with diets.  Don't mention the f-word (by which I mean "fat").''
 
 ===See also===
 *[[b-word]]
