--- a/wiki/n-word.wikitext
+++ b/wiki/n-word.wikitext
@@ -3,7 +3,7 @@
 '''n-word''' ''or'' '''N-word''' (''plural'' '''n-words''' ''or'' '''n-words''')
 
 #(''euphemistic'') The word ''[[nigger]]''.
-#Any word beginning with ''n'' that is not normally taboo but is considered to be so in the given context.
+#Any word beginning with ''n'' that is not normally taboo but is considered (often humorously) to be so in the given context.
 
 ===See also===
 *[[b-word]]
