--- a/wiki/%D8%A8%D8%A7%D8%AA%DA%BE%D8%B1%D9%88%D9%85.wikitext
+++ b/wiki/%D8%A8%D8%A7%D8%AA%DA%BE%D8%B1%D9%88%D9%85.wikitext
@@ -7,4 +7,4 @@ From the English word [[bathroom]]
 # [[Faeces]]
 ===Verb===
 '''باتهروم آنا'''
-# To feel the oncoming of [[shit]]. Example:
+# To feel the oncoming of [[shit]].
