--- a/wiki/%D9%BE%D8%A7%D8%AE%D8%A7%D9%86%D9%87.wikitext
+++ b/wiki/%D9%BE%D8%A7%D8%AE%D8%A7%D9%86%D9%87.wikitext
@@ -1,7 +1,1 @@
-==Urdu==
-===Etymology===
-From the [[farsi]] words [[پا]] for [[foot]], and [[خانه]] for [[room]] or [[chamber]].
-===Noun===
-'''پاخانه'''
-# [[Lavatory]], [[toilet]]
-# [[Faeces]], [[shit]]
+#REDIRECT [[پا خانه]]
