--- a/wiki/knock.wikitext
+++ b/wiki/knock.wikitext
@@ -15,6 +15,7 @@
 *French: [[coup]] ''m''(1) (2)
 *German: [[Klopfen]] ''n'' (1), [[Schlag]] ''m'' (2)
 *Indonesian: [[ketukan]], [[ketokan]] (1); [[benturan]] (2)
+*Swedish: [[knackning]] ''c'' (1)
 
 ===Verb===
 '''to knock'''
@@ -33,6 +34,7 @@
 *French: [[frapper]] (1)
 *German: [[klopfen]]
 *Indonesian: [[ketuk]], [[ketok]] (1), [[bentur]], [[tabrak]] (2)
+*Swedish: [[knacka]] (1), [[slå emot]], [[stöta emot]] (2)
 *Vietnamese: [[gõ]] (1)
 
 ===Related terms===
