changed ' to degree (' = feet - that's some skid!); +fr: & it: <doughnut#53725>

--- a/wiki/doughnut.wikitext
+++ b/wiki/doughnut.wikitext
@@ -2,72 +2,79 @@
 ====Hyphenation====
 dough&middot;nut
 
+====Variant spellings====
+*[[donut]] (''US'')
+
 ===Noun===
 '''doughnut''', plural '''[[doughnuts]]'''
 
-# A deep-fried piece of dough or batter, commonly made into a [[ring]] or round shape and mixed with various [[sweeteners]] and [[flavourings]].
-# (''cars'') A peel out or skid mark in the shape of doughnut or toroid; a 360' skid.
-# (''suburban slang'') A fat person. (Synonyms: [[swiss roll]])
-#:''"Hey doughnut! Get over here."''
-# Something in the shape of a doughnut or [[toroid]].
+#A deep-fried piece of dough or batter, commonly made a [[toroidal]] or [[ellipsoidal]] shape and mixed with various [[sweeteners]] and [[flavourings]], and sometimes filled with [[jam]], [[custard]] or [[cream]].
+#Anything in the shape of [[torus]].
+#A peel-out or [[skid-mark]] in the shape of doughnut or toroid; a 360-degree skid.
+#(''derogatory slang'') A fat person.
+#:''Hey doughnut! Get over here.''
 
-====Alternate spellings====
-*[[donut]]
+====Synonyms====
+*(''anything in the shape of a torus''): [[ring]], [[torus]]
+*(''fat person''): [[Swiss roll]]
 
-===Translations===
-;deep-fried piece of dough or batter
+====Translations====
+
+'''deep-fried piece of dough or batter'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Finnish]]: [[donitsi]]
+<!--Put translations for languages from A to I here-->
+*Finnish: [[donitsi]]
+*French: [[beignet]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from J to Z here-->
 |}
 |}
 
-;peel out or skid mark in the shape of a doughnut
+'''anything in the shape of a torus'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from A to I here-->
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from J to Z here-->
 |}
 |}
 
-;fat person
+'''peel-out or skid-mark in the shape of a doughnut'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from A to I here-->
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from J to Z here-->
 |}
 |}
 
-;something in the shape of a doughnut or [[torus]]
+'''fat person'''
 {| border=0  width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from A to I here-->
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-
+<!--Put translations for languages from J to Z here-->
 |}
 |}
 
