this is the British spelling - this is a candidate for the proposed new system of handling variant spellings <doughnut#53725>

--- a/wiki/doughnut.wikitext
+++ b/wiki/doughnut.wikitext
@@ -6,7 +6,7 @@ dough&middot;nut
 *[[donut]] (''US'')
 
 ===Noun===
-'''doughnut''', plural '''[[doughnuts]]'''
+'''doughnut''', plural '''[[doughnuts]]''' (''British spelling'')
 
 #A deep-fried piece of dough or batter, commonly made a [[toroidal]] or [[ellipsoidal]] shape and mixed with various [[sweeteners]] and [[flavourings]], and sometimes filled with [[jam]], [[custard]] or [[cream]].
 #Anything in the shape of [[torus]].
