prettier ext lk <Völkerwanderung#65184>

--- a/wiki/V%C3%B6lkerwanderung.wikitext
+++ b/wiki/V%C3%B6lkerwanderung.wikitext
@@ -1,4 +1,4 @@
-'''Völkerwanderung''' (pronounced: 'f&#339;lker 'vander ung) is the term of [[Germany | German]] historians in the [[19th century]]  to describe the [[migration]]s of the [[Goths]], [[Vandals]], [[Franks]] and other [[Germanic peoples | Germanic tribes]] triggered by the incursions of the [[Huns]]. (These are discussed at [http://en.wikipedia.org/wiki/V%F6lkerwanderung].)
+'''Völkerwanderung''' (pronounced: 'f&#339;lker 'vander ung) is the term of [[Germany | German]] historians in the [[19th century]]  to describe the [[migration]]s of the [[Goths]], [[Vandals]], [[Franks]] and other [[Germanic peoples | Germanic tribes]] triggered by the incursions of the [[Huns]]. (These are discussed in [http://en.wikipedia.org/wiki/V%F6lkerwanderung Wikipedia].)
 
 {{stub}}
 {{cleanup}}
