fmt; syns; dewikified langs; +fem fr:; removed circularity in defs <Barbadian#35943>

--- a/wiki/Barbadian.wikitext
+++ b/wiki/Barbadian.wikitext
@@ -1,13 +1,22 @@
+==English==
 ===Noun===
-#A person from [[Barbados]] or of Barbadian descent.
-#:'''Translations'''
-#:*[[French]]: [[Barbadien]]
-#:*[[German]]: [[Barbadier]] ''m'', [[Barbadierin]] ''f''
-#:*[[Spanish]]: [[barbadense]]
+#A person from [[Barbados]] or descended from a person from Barbados.
+
+====Synonyms====
+*[[Bajan]]
+
+====Translations====
+*French: [[Barbadien]] ''m'', Barbadienne ''f''
+*German: [[Barbadier]] ''m'', [[Barbadierin]] ''f''
+*Spanish: [[barbadense]]
 
 ===Adjective===
-#Of, from, or pertaining to Barbados, the Barbadian people or the Barbadian language.
-#:'''Translations'''
-#:*[[French]]: [[barbadien]]
-#:*[[German]]: [[barbadisch]]
-#:*[[Spanish]]: [[barbadense]]
+#Of, from, or relating to Barbados, the people of Barbados or their language.
+
+====Synonyms====
+*[[Bajan]]
+
+====Translations====
+*French: [[barbadien]] ''m'', barbadienne ''f''
+*German: [[barbadisch]]
+*Spanish: [[barbadense]]
