There is no wikipedia article on Jest <jest#35285>

--- a/wiki/jest.wikitext
+++ b/wiki/jest.wikitext
@@ -43,7 +43,7 @@
 * [[jestingly]]
 
 ===See also===
-[http://en.wikipedia.org/wiki/Jest Wikipedia article on Jest]
+[http://en.wikipedia.org/wiki/Jest Wikipedia article on Jokes]
 
 [[Category:English intransitive verbs]]
 [[Category:English transitive verbs]]
