/* Translations */ <hula hoop#36463>

--- a/wiki/hula_hoop.wikitext
+++ b/wiki/hula_hoop.wikitext
@@ -9,3 +9,4 @@
 *[[Dutch]]: [[hoelahoep]] ''m''
 *[[Bulgarian]]: [[обръч]] ''m''
 *[[German]]: [[Hula-Hoop-Reifen]] ''m''
+*[[Portuguese]]: [[Bambolê]] ''m''
