--- a/wiki/dysfunctional.wikitext
+++ b/wiki/dysfunctional.wikitext
@@ -15,5 +15,5 @@
 *German: [[dysfunktionelle]]
 *Greek: [[δυσλειτουργικός]] ''m'', [[δυσλειτουργική]] ''f'', [[δυσλειτουργικό]] ''n''
 *Italian: [[disfunzionale]] ''m/f''
-*Portuguese: dysfunctional ''m/f''
+*Portuguese: [[disfuncional]] ''m/f''
 *Spanish: [[disfuncional]] ''m/f''
