--- a/wiki/knock.wikitext
+++ b/wiki/knock.wikitext
@@ -16,6 +16,7 @@
 *German: [[Klopfen]] ''n'' (1), [[Schlag]] ''m'' (2)
 *Indonesian: [[ketukan]], [[ketokan]] (1); [[benturan]] (2)
 *Swedish: [[knackning]] ''c'' (1)
+*Portuguese:[[batida]] ''f''
 
 ===Verb===
 '''to knock'''
