--- a/wiki/knock.wikitext
+++ b/wiki/knock.wikitext
@@ -37,6 +37,7 @@
 *Indonesian: [[ketuk]], [[ketok]] (1), [[bentur]], [[tabrak]] (2)
 *Swedish: [[knacka]] (1), [[slå emot]], [[stöta emot]] (2)
 *Vietnamese: [[gõ]] (1)
+*Portuguese: [[bater]]
 
 ===Related terms===
 *[[knock about]]
