--- a/wiki/fail.wikitext
+++ b/wiki/fail.wikitext
@@ -15,5 +15,6 @@
 
 ===Translations===
 * Danish: [[dumpe]] (1); [[standse]] (2)
-* Dutch: [[falen]]
+* Dutch: [[falen]] (1)
+* German:  [[scheitern]] (1)
 * Russian: [[провалить]] (1)
