--- a/wiki/call.wikitext
+++ b/wiki/call.wikitext
@@ -19,7 +19,7 @@
 ===Translations===
 *Dutch: vragen (1), schreeuwen (2), opbellen (3), bezoeken (4), noemen (5)
 *Finnish: [[kutsua]] (1, 6), [[soittaa]] (puhelimella) (3)
-*Portuguese:[[chamar]] (1), [[gritar]] (2), [[telefonar]] (3)
+*Portuguese:[[chamar]] (1, 5), [[gritar]] (2), [[telefonar]] (3), [[visitar]] (5)
 
 ===Noun===
 '''call'''
