--- a/wiki/call.wikitext
+++ b/wiki/call.wikitext
@@ -39,6 +39,7 @@
 ===Translations===
 
 *[[Finnish]]: [[soitto]] (puhelinsoitto) (1)
+*[[Portuguese]]: [[telefonema]] (1)
 
 ====See also====
 *[[call girl]]
