--- a/wiki/call.wikitext
+++ b/wiki/call.wikitext
@@ -39,7 +39,7 @@
 ===Translations===
 
 *[[Finnish]]: [[soitto]] (puhelinsoitto) (1)
-*[[Portuguese]]: [[telefonema]] (1)
+*[[Portuguese]]: [[telefonema]] (1), [[visita]] (2), [[grito]] (3)
 
 ====See also====
 *[[call girl]]
