--- a/wiki/handicraft.wikitext
+++ b/wiki/handicraft.wikitext
@@ -13,3 +13,4 @@ For [[handcraft]], influenced by ''handiwork''; Anglo Saxon ''handcræft''
 *Czech: [[řemeslo]] ''n''
 *Dutch: [[ambacht]] ''f''
 *Slovak: [[remeslo]] ''n''
+*Portuguese: [[artesanato]]
