--- a/wiki/handicraft.wikitext
+++ b/wiki/handicraft.wikitext
@@ -13,4 +13,4 @@ For [[handcraft]], influenced by ''handiwork''; Anglo Saxon ''handcræft''
 *Czech: [[řemeslo]] ''n''
 *Dutch: [[ambacht]] ''f''
 *Slovak: [[remeslo]] ''n''
-*Portuguese: [[artesanato]]
+*Portuguese: [[artesanato]](1), [[artesão]] (2)
