--- a/wiki/image.wikitext
+++ b/wiki/image.wikitext
@@ -11,6 +11,6 @@
 *[[French]]: [[image]] ''f''
 *[[German]]: [[Bild]] ''n''
 *[[Spanish]]: [[imagen]] ''f''
-*[[Portuguese]]:
+*[[Portuguese]]:[[imagem, figura, fotografia]]
 *[[Romanian]]: [[imagine]] ''f'', [[poză]] ''f''
 *[[Russian]]: [[образ]] ''m''
