--- a/wiki/billiards.wikitext
+++ b/wiki/billiards.wikitext
@@ -15,6 +15,7 @@
 *Korean: [[당구]]
 *Russian: [[бильярды]] (bil'yardi)
 *Spanish: [[billares]] ''m plural''
+*Portuguese: [[bilhar]] ''m''
 
 ===See also===
 *[[pool]]
