/* Translations */ <of course#48400>

--- a/wiki/of_course.wikitext
+++ b/wiki/of_course.wikitext
@@ -22,6 +22,6 @@
 *Italian: [[certo]], [[per forza]], [[naturalmente]]
 *Japanese: [[当然]] ([[とうぜん]], tōzen)
 *Polish: [[oczywiście]]
-*Portuguese: [[naturalmente]]
+*Portuguese: [[naturalmente, de acordo]]
 *Spanish: [[por supuesto]]
 *Swedish: [[naturligtvis]]
