--- a/wiki/triumph.wikitext
+++ b/wiki/triumph.wikitext
@@ -9,3 +9,6 @@
 #A state of joy or exultation for success.
 #Success causing exultation; victory; conquest; as, the triumph of knowledge.
 #A trump card; also, an old game at cards.
+
+===Translation===
+*Portuguese: [[triunfo]] ''m''
