--- a/wiki/dick.wikitext
+++ b/wiki/dick.wikitext
@@ -24,7 +24,7 @@
 *Dutch: [[lul]] ''m'' (1), [[detective]] ''m'' (2), [[speurder]] ''m'' (2)
 *Hungarian: [[fasz]] ''(pej!)'' (1)
 *Slovak: [[kotok]] ''(pej!)'' (1)
-
+*Portuguese: [[pinto]] (1)
 ----
 
 ==German==
