/* Translations */ Hungarian: formal/informal versions <welcome#2635>

--- a/wiki/welcome.wikitext
+++ b/wiki/welcome.wikitext
@@ -27,7 +27,7 @@
 *{{el}}: [[καλώς ορίσατε]]! (kalós orísate)
 *{{gn}}: [[tereg&#771;uah&#7869; porãite]]!
 *{{he}}: ![[ברוך הבא]] (ba'ruch ha'ba) ''m'', ![[ברוכה הבאה]] (bru'kha ha'ba'a) ''f'', ![[ברוכים הבאים]] (bru'khim ha'ba'im) ''m pl'', ![[ברוכות הבאות]] (bru'khot ha'ba'ot) ''f pl''
-*{{hu}}: [[isten hozott]]!
+*{{hu}}: [[Isten hozott]]! ''(more informal)'', [[Isten hozta]]! ''(more formal)''
 *{{is}}: [[velkommin]]!
 *{{id}}: [[selamat datang]]!
 *{{ia}}: [[benvenite]]!
